//使用proto3语法
syntax = "proto3";

import "causa.proto";

//生成多个java文件
//option java_multiple_files = true;
//把生成的文件放到哪个包下
option java_package = "com.smb";
//输出的类名
option java_outer_classname = "SmbServiceProto";

//定义一个类
service SmbService {
  //定义一个gRPC方法，参数为HelloRequest，返回结果为HelloResponse
  rpc getMedicineInfo(MedicineReq) returns(MedicineResponse) {};
}
